reference overflow fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -189,8 +189,9 @@ img.IUPUI-logo{
 }
 
 /* References style wrap */
-.referencesList li a {
-  overflow-wrap: break-word;
+.referencesList {
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 
